alteraçoes na disposição dos dados

--- a/previsao.ipynb
+++ b/previsao.ipynb
@@ -1340,6 +1340,256 @@
    "source": [
     "tabela_jogos_ajustada"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\Luis_Barros\\AppData\\Local\\Temp\\ipykernel_23272\\356588902.py:1: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  tabela_jogos_ajustada['resultado'] = tabela_jogos_ajustada['resultado'].fillna(\"a jogar\")\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>fora</th>\n",
+       "      <th>casa</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>12</th>\n",
+       "      <td>América Mineiro</td>\n",
+       "      <td>Goiás</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>15</th>\n",
+       "      <td>América Mineiro</td>\n",
+       "      <td>Palmeiras</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>27</th>\n",
+       "      <td>Athletico Paranaense</td>\n",
+       "      <td>Cruzeiro</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>28</th>\n",
+       "      <td>Athletico Paranaense</td>\n",
+       "      <td>Cuiabá</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>43</th>\n",
+       "      <td>Atlético Mineiro</td>\n",
+       "      <td>Bahia</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>49</th>\n",
+       "      <td>Atlético Mineiro</td>\n",
+       "      <td>Flamengo</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>60</th>\n",
+       "      <td>Bahia</td>\n",
+       "      <td>América Mineiro</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>86</th>\n",
+       "      <td>Botafogo</td>\n",
+       "      <td>Coritiba</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>94</th>\n",
+       "      <td>Botafogo</td>\n",
+       "      <td>Internacional</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>106</th>\n",
+       "      <td>Corinthians</td>\n",
+       "      <td>Coritiba</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>119</th>\n",
+       "      <td>Corinthians</td>\n",
+       "      <td>Vasco da Gama</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>136</th>\n",
+       "      <td>Coritiba</td>\n",
+       "      <td>Red Bull Bragantino</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>144</th>\n",
+       "      <td>Cruzeiro</td>\n",
+       "      <td>Botafogo</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>152</th>\n",
+       "      <td>Cruzeiro</td>\n",
+       "      <td>Goiás</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>169</th>\n",
+       "      <td>Cuiabá</td>\n",
+       "      <td>Flamengo</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>198</th>\n",
+       "      <td>Flamengo</td>\n",
+       "      <td>São Paulo</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>215</th>\n",
+       "      <td>Fluminense</td>\n",
+       "      <td>Palmeiras</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>217</th>\n",
+       "      <td>Fluminense</td>\n",
+       "      <td>Santos</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>236</th>\n",
+       "      <td>Fortaleza</td>\n",
+       "      <td>Red Bull Bragantino</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>237</th>\n",
+       "      <td>Fortaleza</td>\n",
+       "      <td>Santos</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>251</th>\n",
+       "      <td>Goiás</td>\n",
+       "      <td>Fortaleza</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>253</th>\n",
+       "      <td>Goiás</td>\n",
+       "      <td>Grêmio</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>270</th>\n",
+       "      <td>Grêmio</td>\n",
+       "      <td>Fluminense</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>285</th>\n",
+       "      <td>Internacional</td>\n",
+       "      <td>Corinthians</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>288</th>\n",
+       "      <td>Internacional</td>\n",
+       "      <td>Cuiabá</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>307</th>\n",
+       "      <td>Palmeiras</td>\n",
+       "      <td>Cruzeiro</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>339</th>\n",
+       "      <td>Red Bull Bragantino</td>\n",
+       "      <td>Vasco da Gama</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>341</th>\n",
+       "      <td>Santos</td>\n",
+       "      <td>Athletico Paranaense</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>362</th>\n",
+       "      <td>São Paulo</td>\n",
+       "      <td>Atlético Mineiro</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>363</th>\n",
+       "      <td>São Paulo</td>\n",
+       "      <td>Bahia</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>393</th>\n",
+       "      <td>Vasco da Gama</td>\n",
+       "      <td>Grêmio</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                     fora                  casa\n",
+       "12        América Mineiro                 Goiás\n",
+       "15        América Mineiro             Palmeiras\n",
+       "27   Athletico Paranaense              Cruzeiro\n",
+       "28   Athletico Paranaense                Cuiabá\n",
+       "43       Atlético Mineiro                 Bahia\n",
+       "49       Atlético Mineiro              Flamengo\n",
+       "60                  Bahia       América Mineiro\n",
+       "86               Botafogo              Coritiba\n",
+       "94               Botafogo         Internacional\n",
+       "106           Corinthians              Coritiba\n",
+       "119           Corinthians         Vasco da Gama\n",
+       "136              Coritiba   Red Bull Bragantino\n",
+       "144              Cruzeiro              Botafogo\n",
+       "152              Cruzeiro                 Goiás\n",
+       "169                Cuiabá              Flamengo\n",
+       "198              Flamengo             São Paulo\n",
+       "215            Fluminense             Palmeiras\n",
+       "217            Fluminense                Santos\n",
+       "236             Fortaleza   Red Bull Bragantino\n",
+       "237             Fortaleza                Santos\n",
+       "251                 Goiás             Fortaleza\n",
+       "253                 Goiás                Grêmio\n",
+       "270                Grêmio            Fluminense\n",
+       "285         Internacional           Corinthians\n",
+       "288         Internacional                Cuiabá\n",
+       "307             Palmeiras              Cruzeiro\n",
+       "339   Red Bull Bragantino         Vasco da Gama\n",
+       "341                Santos  Athletico Paranaense\n",
+       "362             São Paulo      Atlético Mineiro\n",
+       "363             São Paulo                 Bahia\n",
+       "393         Vasco da Gama                Grêmio"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "tabela_jogos_ajustada['resultado'] = tabela_jogos_ajustada['resultado'].fillna(\"a jogar\")\n",
+    "tabela_jogos_realizados = tabela_jogos_ajustada[tabela_jogos_ajustada['resultado'].str.contains(\"–\")]\n",
+    "tabela_jogos_faltantes = tabela_jogos_ajustada[~tabela_jogos_ajustada['resultado'].str.contains(\"–\")]\n",
+    "tabela_jogos_faltantes = tabela_jogos_faltantes.drop(columns=['resultado'])\n",
+    "tabela_jogos_faltantes"
+   ]
   }
  ],
  "metadata": {
